[gd_scene load_steps=7 format=3 uid="uid://c17m4r81q74an"]

[ext_resource type="Script" uid="uid://cvvr35vlnrwb5" path="res://scripts/enemy_1.gd" id="1_3ct15"]
[ext_resource type="Texture2D" uid="uid://c00nuxjn3kvsy" path="res://gfx/enemy1.png" id="2_tntx6"]

[sub_resource type="Animation" id="Animation_tntx6"]
resource_name = "Fade"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v8n5m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01cyv"]
_data = {
&"Fade": SubResource("Animation_tntx6"),
&"RESET": SubResource("Animation_v8n5m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tntx6"]
radius = 8.0

[node name="Enemy1" type="Area2D"]
script = ExtResource("1_3ct15")

[node name="ShipSprite" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_tntx6")

[node name="ShipAnimationPlayer" type="AnimationPlayer" parent="ShipSprite"]
libraries = {
&"": SubResource("AnimationLibrary_01cyv")
}

[node name="EnemyHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tntx6")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
